# FastAPI

./: .gitignore  README.md  conftest.py  create_multiple_transactions.py  main.py  models.py  pyproject.toml
app/: db.py  main.py  models.py
app/routers/: customers.py  plans.py  transactions.py
app/tests/: tests_customers.py
