[project]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Martínez",email = "danieljosuemartinezjarquin3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.138.0,<0.139.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)"
]


[tool.poetry]
package-mode = false

[tool.poetry.scripts]
dev = "uvicorn main:app --reload"


[tool.fastapi]
entrypoint = "app.main:app"




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
